# grid-game

./: .gitignore  Cargo.toml  README.md  compile_for_web.bat  grid-game.wasm
.github/workflows/: static.yml
saves/maps/: small.map_save  todo make world gen.map_save
saves/players/: small.player_save  todo make world gen.player_save
src/: cam.rs  craft.rs  egui_style.rs  entity.rs  game_ui.rs  main.rs  map.rs  physics.rs  player.rs  profiling.rs  settings.rs  skin_style.rs  title.txt  update.rs
src/shader/: blur.glsl  damage_frag.glsl  light_frag.glsl  post_process.glsl  vertex.glsl  world_frag.glsl
web/: 2.js  index.html  itch.html
