[package]
name = "grid-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9"
egui = { version = "0.26.0"}
# egui-macroquad = "0.15.0"
fastrand = "2.0.1"
gaussian_blur = "0.1.1"
grid = "0.13.0"
macroquad = "0.4.4"
perlin2d = "0.2.6"


[profile.release]
codegen-units = 1
lto = false
panic = "abort"
strip = "debuginfo"


[profile.dev.package."*"]
opt-level = 3