[package]
name = "grid-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9"
# egui = { version = "0.26.0"}
# egui-macroquad = "0.15.0"
fastrand = "2.0.1"
gaussian_blur = "0.1.1"
grid = "0.13.0"
# macroquad = "0.4.4"
perlin2d = "0.2.6"
savefile = "0.16.5"
savefile-derive = "0.16.5"
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
rayon = "1.8.1"
console_error_panic_hook = "0.1.7"
egui-macroquad = "0.15.0"
macroquad = { "version" = "0.3.26", features = ["backtrace"]}
quad-url = "0.1.1"
backtrace = "0.3.69"
rustc-hash = "1.1.0"
# egui = "0.26.2"


[profile.release]
codegen-units = 1
lto = false
debug = true
# panic = "abort"
# strip = "debuginfo"


[profile.dev.package."*"]
opt-level = 3
